--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Setup Python
         uses: actions/setup-python@v3
@@ -27,11 +29,10 @@ jobs:
 
       - name: Commit & Push Changes
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/jpietanza1/thebigidea.git
           git add sports.html
-          git commit -m "Updated MLB stats"
-          git push origin main
+          git commit -m "Updated MLB stats" || echo "No changes to commit"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
