--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -35,11 +35,17 @@ jobs:
       - name: Run NBA Scraper
         run: python scraper_nba.py
 
+      - name: Run MLB Rbat+ Scraper
+        run: python scraper_mlb_Rbat+.py
+      
+      - name: Run MLB ERA+ Scraper
+        run: python scraper_mlb_ERA+.py
+
       - name: Commit and Push Updated JSON
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add mlb_leader_stats_table.json nfl_leader_stats_table.json nba_leader_stats_table.json # Add JSON files
+          git add mlb_leader_stats_table.json nfl_leader_stats_table.json nba_leader_stats_table.json mlb_Rbat+_table.json mlb_ERA+_table # Add JSON files
           git commit -m "Automated update: MLB, NBA, NFL stats JSON"
           git push
         env:
