--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add mlb_leader_stats_table.json nfl_leader_stats_table.json nba_leader_stats_table.json MLB_position_player_Rbat+.json MLB_pitcher_ERA+.json # Add JSON files
+          git add mlb_leader_stats_table.json nfl_leader_stats_table.json nba_leader_stats_table.json MLB_position_player_Rbat+.json MLB_pitcher_ERA_plus.json # Add JSON files
           git commit -m "Automated update: MLB, NBA, NFL stats JSON"
           git push
         env:
