--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -41,11 +41,22 @@ jobs:
       - name: Run MLB ERA+ Scraper
         run: python scraper_mlb_ERA+.py
 
+      - name: Run NFL Player Scraper
+        run: python scraper_NFL_FantRank
+
       - name: Commit and Push Updated JSON
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add mlb_leader_stats_table.json nfl_leader_stats_table.json nba_leader_stats_table.json MLB_position_player_Rbat+.json MLB_pitcher_ERA+.json # Add JSON files
+          git add mlb_leader_stats_table.json 
+            nfl_leader_stats_table.json 
+            nba_leader_stats_table.json 
+            MLB_position_player_Rbat+.json 
+            MLB_pitcher_ERA+.json 
+            NFL_QB_players.json 
+            NFL_RB_players.json 
+            NFL_WR_players.json 
+              # Add JSON files
           git commit -m "Automated update: MLB, NBA, NFL stats JSON"
           git push
         env:
